# cs2-arbitrage-tracker

./: .env.example  .gitignore  README.md  features.md  mcp_server.py  plan.md  pyproject.toml
.claude/: CLAUDE.md
.claude/memory/: MEMORY.md  project_cs2.md
.claude/plans/: restructure-to-fastapi.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: caseOpenings.ts  cases.ts  client.ts  deals.ts  groups.ts  inventory.ts  items.ts  scenarios.ts  utils.ts
frontend/src/context/: CurrencyContext.tsx
frontend/src/hooks/: queryKeys.ts  useCaseOpenings.ts  useCases.ts  useDeals.ts  useExchangeRate.ts  useGroups.ts  useInventory.ts  useItems.ts  useScenarios.ts
frontend/src/pages/: CaseOpeningDetail.tsx  CaseOpenings.tsx  Cases.tsx  Dashboard.tsx  Deals.tsx  Groups.tsx  Inventory.tsx  ItemsTracker.tsx  ScenarioBuilder.tsx  ScenarioDetail.tsx
frontend/src/types/: api.ts
scripts/: bulk_add_items.py
src/: config.py  main.py  utils.py
src/models/: base.py  case_opening.py  csroi.py  deal.py  group.py  inventory.py  item.py  scenario.py  steam.py
src/routers/: case_openings.py  cases.py  csfloat.py  deals.py  groups.py  inventory.py  items.py  lookup.py  scenarios.py
src/services/: case_openings.py  cases.py  csfloat.py  deals.py  groups.py  inventory.py  items.py  scenario.py  steam.py
tests/: conftest.py  test_csfloat_client.py  test_steam_client.py
tests/integration/: test_csfloat.py  test_steam.py
tests/unit/: test_csfloat.py  test_inventory.py  test_steam.py
(+10 files in other folders)
