[project]
name = "cs2"
version = "0.1.0"
description = "CS2 case and item arbitrage tracker API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.2.4",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]
